--- a/admin.html
+++ b/admin.html
@@ -15,6 +15,15 @@
         width: 30px;
     }
 
+    .nav_top{
+        width: 100%;
+        background-color: #eee;
+        border-right: 1px solid #ddd;
+        position: fixed;
+        height: 100px;
+        font-size: xx-large;
+    }
+
     .nav_left{
         width: 200px;
         background-color: #eee;
@@ -22,6 +31,7 @@
         position: fixed;
         height: 100%;
         font-size: xx-large;
+        margin-top: 100px;
     }
 
     .menu li{
@@ -31,6 +41,8 @@
         padding: 0 20px;
         font-size: 12px;
         color: #555;
+        margin-bottom: 5px;
+        font-weight: bold;
     }
 
     #admin{
@@ -42,13 +54,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <nav class="navbar bg-body-tertiary">
+    <nav class="nav_top" style="z-index: 2;">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <img src="./image/Ads.png">
                 <span id="admin">Admin</span>
             </a>
-            <a class="navbar-brand justify-content-between" href="#">
+            <a class="navbar-brand" href="#" style="float: right;">
                 <img src="./image/weather-icons-master/svg/wi-day-sunny.svg" class="imgSunny">
                 <img src="./image/keypad.png" class="imgKeypad">
                 <img src="./image/person.png" class="imgKeypad">
@@ -56,18 +68,199 @@
         </div>
     </nav>
 
-    <nav class="nav_left">
+    <nav class="nav_left" style="z-index: 1;">
         <ul class="menu">
-            <li>Home</li>
-            <li>공지사항</li>
-            <li>회원관리</li>
-            <li>서비스관리</li>
-            <li>커뮤니케이션</li>
-            <li>시스템관리</li>
-            <li>개인정보관리</li>
-            <li>test</li>
+            <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clock" viewBox="0 0 16 16">
+                <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71z"/>
+                <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16m7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0"/>
+              </svg>&nbsp;Home</li>
+            <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bell" viewBox="0 0 16 16">
+                <path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2M8 1.918l-.797.161A4 4 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4 4 0 0 0-3.203-3.92zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5 5 0 0 1 13 6c0 .88.32 4.2 1.22 6"/>
+              </svg>&nbsp;공지사항</li>
+            <li><details><summary><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-people" viewBox="0 0 16 16">
+                <path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1zm-7.978-1L7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002-.014.002zM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4m3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0M6.936 9.28a6 6 0 0 0-1.23-.247A7 7 0 0 0 5 9c-4 0-5 3-5 4q0 1 1 1h4.216A2.24 2.24 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816M4.92 10A5.5 5.5 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275ZM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0m3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4"/>
+              </svg>&nbsp;회원관리</summary>
+            <ul>
+              <li>1</li>
+              <li>2</li>
+              <li>3</li>
+            </ul></details></li>
+            <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-laptop" viewBox="0 0 16 16">
+                <path d="M13.5 3a.5.5 0 0 1 .5.5V11H2V3.5a.5.5 0 0 1 .5-.5zm-11-1A1.5 1.5 0 0 0 1 3.5V12h14V3.5A1.5 1.5 0 0 0 13.5 2zM0 12.5h16a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 12.5"/>
+              </svg>&nbsp;서비스관리</li>
+            <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat-left" viewBox="0 0 16 16">
+                <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+              </svg>&nbsp;커뮤니케이션</li>
+            <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-gear" viewBox="0 0 16 16">
+                <path d="M8 4.754a3.246 3.246 0 1 0 0 6.492 3.246 3.246 0 0 0 0-6.492M5.754 8a2.246 2.246 0 1 1 4.492 0 2.246 2.246 0 0 1-4.492 0"/>
+                <path d="M9.796 1.343c-.527-1.79-3.065-1.79-3.592 0l-.094.319a.873.873 0 0 1-1.255.52l-.292-.16c-1.64-.892-3.433.902-2.54 2.541l.159.292a.873.873 0 0 1-.52 1.255l-.319.094c-1.79.527-1.79 3.065 0 3.592l.319.094a.873.873 0 0 1 .52 1.255l-.16.292c-.892 1.64.901 3.434 2.541 2.54l.292-.159a.873.873 0 0 1 1.255.52l.094.319c.527 1.79 3.065 1.79 3.592 0l.094-.319a.873.873 0 0 1 1.255-.52l.292.16c1.64.893 3.434-.902 2.54-2.541l-.159-.292a.873.873 0 0 1 .52-1.255l.319-.094c1.79-.527 1.79-3.065 0-3.592l-.319-.094a.873.873 0 0 1-.52-1.255l.16-.292c.893-1.64-.902-3.433-2.541-2.54l-.292.159a.873.873 0 0 1-1.255-.52zm-2.633.283c.246-.835 1.428-.835 1.674 0l.094.319a1.873 1.873 0 0 0 2.693 1.115l.291-.16c.764-.415 1.6.42 1.184 1.185l-.159.292a1.873 1.873 0 0 0 1.116 2.692l.318.094c.835.246.835 1.428 0 1.674l-.319.094a1.873 1.873 0 0 0-1.115 2.693l.16.291c.415.764-.42 1.6-1.185 1.184l-.291-.159a1.873 1.873 0 0 0-2.693 1.116l-.094.318c-.246.835-1.428.835-1.674 0l-.094-.319a1.873 1.873 0 0 0-2.692-1.115l-.292.16c-.764.415-1.6-.42-1.184-1.185l.159-.291A1.873 1.873 0 0 0 1.945 8.93l-.319-.094c-.835-.246-.835-1.428 0-1.674l.319-.094A1.873 1.873 0 0 0 3.06 4.377l-.16-.292c-.415-.764.42-1.6 1.185-1.184l.292.159a1.873 1.873 0 0 0 2.692-1.115z"/>
+              </svg>&nbsp;시스템관리</li>
+            <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+                <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"/>
+              </svg>&nbsp;개인정보관리</li>
+            <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-stack" viewBox="0 0 16 16">
+                <path d="m14.12 10.163 1.715.858c.22.11.22.424 0 .534L8.267 15.34a.6.6 0 0 1-.534 0L.165 11.555a.299.299 0 0 1 0-.534l1.716-.858 5.317 2.659c.505.252 1.1.252 1.604 0l5.317-2.66zM7.733.063a.6.6 0 0 1 .534 0l7.568 3.784a.3.3 0 0 1 0 .535L8.267 8.165a.6.6 0 0 1-.534 0L.165 4.382a.299.299 0 0 1 0-.535z"/>
+                <path d="m14.12 6.576 1.715.858c.22.11.22.424 0 .534l-7.568 3.784a.6.6 0 0 1-.534 0L.165 7.968a.299.299 0 0 1 0-.534l1.716-.858 5.317 2.659c.505.252 1.1.252 1.604 0z"/>
+              </svg>&nbsp;test</li>
         </ul>
     </nav>
+
+    <div class="container-fluid" style="width: 1500px; height: auto;">
+        <div class="row">
+            <div class="col-1" style="background-color: rgb(240, 235, 235); width: 250px;">
+            </div>
+            <div class="col" style="margin-top: 100px;">
+                <div class="row" style="background-color: rgb(240, 235, 235); width: auto; height: 70px;">
+                    <p style="font-size: xx-large; margin-top: auto;">기본정보</p>
+                </div>
+                <div class="row">
+                    <div class="col" style="margin-top: 30px;">
+                        코드그룹<span style="color: red;">*</span>
+                        <div class="dropdown">
+                            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="width: 270px; height: 30px;">
+                              선택하세요
+                            </button>
+                            <ul class="dropdown-menu">
+                              <li><a class="dropdown-item" href="#">Action</a></li>
+                              <li><a class="dropdown-item" href="#">Another action</a></li>
+                              <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                </div>
+                <div class="row">
+                    <div class="col" style="margin-top: 30px;">
+                        코드<span style="color: red;">*</span><br>
+                        <input type="text" style="width: 270px; background-color: rgb(223, 221, 221);" placeholder="자동생성">
+                    </div>
+                    <div class="col" style="margin-top: 30px;">
+                        코드 (ANOTHER)<br>
+                        <input type="text" style="width: 270px;" placeholder="영대소문자, 숫자">
+                    </div>
+                    <div class="col" style="margin-top: 30px;">
+                        코드 이름<span style="color: red;">*</span><br>
+                        <input type="text" style="width: 270px;" placeholder="한글, 영대소문자, 숫자">
+                    </div>
+                    <div class="col" style="margin-top: 30px;">
+                        코드 이름(영문)<br>
+                        <input type="text" style="width: 270px;" placeholder="영대소문자, 숫자">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col" style="margin-top: 30px;">
+                        사용여부<span style="color: red;">*</span><br>
+                        <div class="dropdown">
+                            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="width: 270px; height: 30px;">
+                              사용
+                            </button>
+                            <ul class="dropdown-menu">
+                              <li><a class="dropdown-item" href="#">Action</a></li>
+                              <li><a class="dropdown-item" href="#">Another action</a></li>
+                              <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col" style="margin-top: 30px;">
+                        순서<br>
+                        <input type="text" style="width: 270px;">
+                    </div>
+                    <div class="col" style="margin-top: 30px;"></div>
+                    <div class="col" style="margin-top: 30px;"></div>
+                </div>
+                <div class="row">
+                    <div class="col" style="margin-top: 30px;">
+                        설명<br>
+                        <textarea style="width: 590px; height: 100px;"></textarea>
+                    </div>
+                    <div class="col" style="margin-top: 30px;"></div>
+                    <div class="col" style="margin-top: 30px;"></div>
+                    <div class="col" style="margin-top: 30px;"></div>
+                </div>
+                <div class="row">
+                    <div class="col" style="margin-top: 30px;">
+                        다국어1<br>
+                        <input type="text" style="width: 270px;">
+                    </div>
+                    <div class="col" style="margin-top: 30px;">
+                        다국어2<br>
+                        <input type="text" style="width: 270px;">
+                    </div>
+                    <div class="col" style="margin-top: 30px;">
+                        다국어3<br>
+                        <input type="text" style="width: 270px;">
+                    </div>
+                    <div class="col" style="margin-top: 30px;">
+                        다국어4<br>
+                        <input type="text" style="width: 270px;">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col" style="margin-top: 30px;">
+                        다국어5<br>
+                        <input type="text" style="width: 270px;">
+                    </div>
+                    <div class="col" style="margin-top: 30px;">
+                        다국어6<br>
+                        <input type="text" style="width: 270px;">
+                    </div>
+                    <div class="col" style="margin-top: 30px;">
+                        다국어7<br>
+                        <input type="text" style="width: 270px;">
+                    </div>
+                    <div class="col" style="margin-top: 30px;">
+                        다국어8<br>
+                        <input type="text" style="width: 270px;">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col" style="margin-top: 30px;">
+                        예비1 (VARCHAR TYPE)<br>
+                        <input type="text" style="width: 270px;">
+                    </div>
+                    <div class="col" style="margin-top: 30px;">
+                        예비2 (VARCHAR TYPE)<br>
+                        <input type="text" style="width: 270px;">
+                    </div>
+                    <div class="col" style="margin-top: 30px;">
+                        예비3 (VARCHAR TYPE)<br>
+                        <input type="text" style="width: 270px;">
+                    </div>
+                    <div class="col" style="margin-top: 30px;">
+                        예비4 (VARCHAR TYPE)<br>
+                        <input type="text" style="width: 270px;">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col" style="margin-top: 30px;">
+                        예비1 (INT TYPE)<br>
+                        <input type="text" style="width: 270px;">
+                    </div>
+                    <div class="col" style="margin-top: 30px;">
+                        예비2 (INT TYPE)<br>
+                        <input type="text" style="width: 270px;">
+                    </div>
+                    <div class="col" style="margin-top: 30px;">
+                        예비3 (INT TYPE)<br>
+                        <input type="text" style="width: 270px;">
+                    </div>
+                    <div class="col" style="margin-top: 30px;">
+                        예비4 (INT TYPE)<br>
+                        <input type="text" style="width: 270px;">
+                    </div>
+                </div>
+                <div class="row" style="margin-top: 30px;">
+                    <div class="col">
+                        <button type="button"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list-ul" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M5 11.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5m-3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2"/>
+                        </svg></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
