목록 높이 고정 제거거

--- a/admin.html
+++ b/admin.html
@@ -35,7 +35,6 @@
     }
 
     .menu li{
-        height: 40px;
         line-height: 30px;
         display: block;
         padding: 0 20px;
@@ -278,9 +277,7 @@
                     </div>
                     <div class="col"></div>
                     <div class="col"></div>
-                    <div class="col">
-                        
-                    </div>
+                    <div class="col"></div>
                 </div>
             </div>
         </div>
