1. 로그인 창 수정 완료료

--- a/sign.html
+++ b/sign.html
@@ -19,22 +19,20 @@
             background-position: 5px center;
             padding-left: 30px;
             border: 0.1px solid #2e3238;
-            width: 450px;
-            height: 30px;
             box-sizing: border-box;
             border-radius: 3px;
             background-repeat: no-repeat;
+            margin-left: 17%;
         }
         #drop_the_text2 input{
             background-image: url(./image/key-fill.svg);
             background-position: 5px center;
             padding-left: 30px;
             border: 0.1px solid #2e3238;
-            width: 450px;
-            height: 30px;
             box-sizing: border-box;
             border-radius: 3px;
             background-repeat: no-repeat;
+            margin-left: 17%;
         }
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -85,22 +83,23 @@
             </div>
             <div class="row">
                 <div class="col">
-                     <label style="margin-right: 400px;">ID</label>
+                    <label for="exampleFormControlInput1" class="form-label" style="margin-right: 400px;">ID</label>
                 </div>
             </div>
             <div class="row">
                 <div class="col">
-                    <p id="drop_the_text1"><input type="text" placeholder="name@example.com"></p>
+                    <p id="drop_the_text1"><input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" style="width: 450px; height: 30px;"></p>
                 </div>
             </div>
             <div class="row">
                 <div class="col">
-                    <label style="margin-right: 350px;">Password</label>
+                    <label for="exampleFormControlInput2" class="form-label" style="margin-right: 350px;">Password</label>
                 </div>
             </div>
             <div class="row">
                 <div class="col">
-                    <p id="drop_the_text2"><input type="text" placeholder="Password"></p>
+                    <p id="drop_the_text2"><input type="password" class="form-control" id="exampleFormControlInput2" placeholder="Password" style="width: 450px; height: 30px;"></p>
+
                 </div>
             </div>
             <div class="row">
@@ -113,7 +112,7 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <button class="btn btn-primary" type="submit" style="width: 450px; height: 40px; color: white; margin-top: 50px;"><b>Sign In</b></button>
+                    <a href="./sjh.html"><button class="btn btn-primary" type="button" style="width: 450px; height: 40px; color: white; margin-top: 50px;"><b>Sign In</b></button></a>
                 </div>
             </div>
             <div class="row">
