--- a/code_admin.html
+++ b/code_admin.html
@@ -182,49 +182,40 @@
                             <h3 style="font-weight: bolder;">Code</h3>
                         </div>
                         <div class="row" style="margin-left: 60px;">
-                            <div class="dropdown">
-                                <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="width: 15%; height: 30px; background-color: white;">
-                                    N
-                                </button>
-                                <div class="dropdown-menu">
-                                    <div><a class="dropdown-item" href="#">Ｎ</a></div>
-                                    <div><a class="dropdown-item" href="#">Ｙ</a></div>
-                                </div>
-                                <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="width: 15%; height: 30px; background-color: white;">
-                                    Y
-                                </button>
-                                <div class="dropdown-menu">
-                                    <div><a class="dropdown-item" href="#">Ｎ</a></div>
-                                    <div><a class="dropdown-item" href="#">Ｙ</a></div>
-                                </div>
-                                <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="width: 15%; height: 30px; background-color: white;">
-                                    날짜
-                                </button>
-                                <div class="dropdown-menu">
-                                    <input type="date">
-                                </div>
-                                <label style="width: 15%; height: 30px; background-color: white;">2024-12-25</label>
-                                <label style="width: 15%; height: 30px; background-color: white;">2025-01-24</label>
-                            </div>
+                            <select class="form-select" aria-label="Default select example" style="width: 15%;">
+                                <option value="1">N</option>
+                                <option value="2">Y</option>
+                            </select>
+                            <select class="form-select" aria-label="Default select example" style="width: 15%; margin-left: 5px;">
+                                <option value="1">N</option>
+                                <option value="2">Y</option>
+                            </select>
+                            <select class="form-select" aria-label="Default select example" style="width: 15%; margin-left: 5px;">
+                                <option selected>날짜</option>
+                                <option value="1">등록일</option>
+                                <option value="2">수정일</option>
+                            </select>
+                            <label style="width: 15%; background-color: white; margin-left: 5px; text-align: center;">2024-12-25</label>
+                            <label style="width: 15%; background-color: white;margin-left: 5px; text-align: center;">2025-01-24</label>
                         </div>
                         <div class="row" style="margin-left: 60px;">
-                            <div class="dropdown">
-                                <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="width: 15%; height: 30px; background-color: white;">
-                                    검색 구분
-                                </button>
-                                <div class="dropdown-menu">
-                                    <div><a class="dropdown-item" href="#">Ｎ</a></div>
-                                    <div><a class="dropdown-item" href="#">Ｙ</a></div>
-                                </div>
-                                <input type="search" placeholder="검색어" style="width: 15%; height: 30px;">
-                                <button type="button" style="width: 40px; height: 30px;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                                    <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
-                                  </svg></button>
-                                <button type="button" style="width: 40px; height: 30px;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-clockwise" viewBox="0 0 16 16">
-                                    <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2z"/>
-                                    <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466"/>
-                                  </svg></button>
-                            </div>
+                            <select class="form-select" aria-label="Default select example" style="width: 15%; margin-top: 5px;">
+                                <option selected>검색구분</option>
+                                <option value="1">코드그룹 코드</option>
+                                <option value="2">코드그룹 이름</option>
+                                <option value="3">코드</option>
+                                <option value="4">대체 코드</option>
+                                <option value="5">코드 이름</option>
+                                <option value="6">코드 이름 (영문)</option>
+                            </select>
+                            <input type="search" placeholder="검색어" style="width: 15%; margin-left: 5px; margin-top: 5px;">
+                            <button type="button" style="width: 40px; margin-left: 5px; margin-top: 5px;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                                <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+                                </svg></button>
+                            <button type="button" style="width: 40px; margin-left: 5px; margin-top: 5px;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-clockwise" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2z"/>
+                                <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466"/>
+                                </svg></button>
                         </div>
                     </div>
                     <div class="row" style="background-color: white; width: 100%; height: 400px; margin-left: 5px;">
